HDL ANT Deployment Package/retrieveUnpackaged/objects/Gift__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Gifts</relationshipLabel>
        <relationshipName>Gifts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Custom_Monetary_Value__c</fullName>
        <label>Custom Monetary Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift_Date__c</fullName>
        <label>Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Other__c</fullName>
        <label>Gift (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Gifts</relationshipLabel>
        <relationshipName>Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monetary_Value__c</fullName>
        <label>Monetary Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Gift</label>
    <nameField>
        <displayFormat>GN-{0000}</displayFormat>
        <label>Gift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Gift_Other_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Gift__r.Name = &quot;Other&quot;,  ISBLANK(Gift_Other__c))</errorConditionFormula>
        <errorDisplayField>Gift_Other__c</errorDisplayField>
        <errorMessage>Because gift is other, you must enter this value</errorMessage>
    </validationRules>
</CustomObject>